package edu.stanford.nlp.loglinear.model.proto;

option java_package = "edu.stanford.nlp.loglinear.model.proto";

option java_outer_classname = "ConcatVectorTableProto";

import "ConcatVector.proto";

message ConcatVectorTable {
    repeated int32 dimensionSize = 1;
    repeated ConcatVector factorTable = 2;
}